--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,17 +5,17 @@ set(CMAKE_CXX_FLAGS "-O3 -Wall -Wextra")
 # Download and unpack googletest at configure time
 configure_file(CMakeLists.txt.in googletest-download/CMakeLists.txt)
 execute_process(COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
-  RESULT_VARIABLE result
-  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest-download )
-if(result)
-  message(FATAL_ERROR "CMake step for googletest failed: ${result}")
-endif()
+        RESULT_VARIABLE result
+        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest-download)
+if (result)
+    message(FATAL_ERROR "CMake step for googletest failed: ${result}")
+endif ()
 execute_process(COMMAND ${CMAKE_COMMAND} --build .
-  RESULT_VARIABLE result
-  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest-download )
-if(result)
-  message(FATAL_ERROR "Build step for googletest failed: ${result}")
-endif()
+        RESULT_VARIABLE result
+        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest-download)
+if (result)
+    message(FATAL_ERROR "Build step for googletest failed: ${result}")
+endif ()
 
 # Prevent overriding the parent project's compiler/linker
 # settings on Windows
@@ -24,28 +24,37 @@ set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 # Add googletest directly to our build. This defines
 # the gtest and gtest_main targets.
 add_subdirectory(${CMAKE_CURRENT_BINARY_DIR}/googletest-src
-                 ${CMAKE_CURRENT_BINARY_DIR}/googletest-build
-                 EXCLUDE_FROM_ALL)
+        ${CMAKE_CURRENT_BINARY_DIR}/googletest-build
+        EXCLUDE_FROM_ALL)
 
 # The gtest/gtest_main targets carry header search path
 # dependencies automatically when using CMake 2.8.11 or
 # later. Otherwise we have to add them here ourselves.
 if (CMAKE_VERSION VERSION_LESS 2.8.11)
-  include_directories("${gtest_SOURCE_DIR}/include")
-endif()
+    include_directories("${gtest_SOURCE_DIR}/include")
+endif ()
 
 include_directories("src/")
 
 file(GLOB pinpon_SRC
-    "src/*.h"
-    "src/*.cc"
-)
+        "src/*.h"
+        "src/*.cc"
+        )
 file(GLOB pinpon_test_SRC
-    "test/*.h"
-    "test/*.cc"
-)
+        "test/*.h"
+        "test/*.cc"
+        )
+file(GLOB dynamic_SRC
+        "dynamic/*.h"
+        "dynamic/*.cc"
+        )
 
 add_executable(pinpon main.cc ${pinpon_SRC})
+
+add_library(pinpon_lib ${pinpon_SRC})
+
+add_library(pinpon_dynamic SHARED ${dynamic_SRC})
+target_link_libraries(pinpon_dynamic pinpon_lib)
 
 # Now simply link against gtest or gtest_main as needed. Eg
 set(CTEST_OUTPUT_ON_FAILURE ON)
