--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,3 +62,5 @@ enable_testing()
 add_executable(pinpon_test ${pinpon_SRC} ${pinpon_test_SRC})
 target_link_libraries(pinpon_test gtest_main)
 add_test(NAME pinpon_test COMMAND pinpon_test)
+
+add_subdirectory(qtpinpon)
