Add infix plus minus support.

--- a/qtpinpon/CMakeLists.txt
+++ b/qtpinpon/CMakeLists.txt
@@ -11,7 +11,7 @@ if(CMAKE_VERSION VERSION_LESS "3.7.0")
     set(CMAKE_INCLUDE_CURRENT_DIR ON)
 endif()
 
-find_package(Qt5 COMPONENTS Widgets REQUIRED)
+find_package(Qt5 COMPONENTS Widgets)
 
 add_executable(qtpinpon
         mainwindow.ui
