--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,4 +63,4 @@ add_executable(pinpon_test ${pinpon_SRC} ${pinpon_test_SRC})
 target_link_libraries(pinpon_test gtest_main)
 add_test(NAME pinpon_test COMMAND pinpon_test)
 
-add_subdirectory(qtpinpon)
+#add_subdirectory(qtpinpon)
