Add comparison infix operators. Add test directory for tests written in pinpon. Overload some stream output operators.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,6 @@
 cmake_minimum_required(VERSION 3.14)
+project(PinponProject)
+
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_FLAGS "-O3 -Wall -Wextra")
 
