Add logger. Add user function parameter defaults work in progress. String unicode text compatibility for windows.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,8 @@ project(PinponProject)
 
 set(CMAKE_CXX_STANDARD 11)
 if(WIN32)
-        set(CMAKE_CXX_FLAGS "/O2 /EHa /MTd")
-        set(CMAKE_CXX_FLAGS_DEBUG "/EHa /MTd")
+        set(CMAKE_CXX_FLAGS "/O2 /EHa /MTd /utf-8")
+        set(CMAKE_CXX_FLAGS_DEBUG "/EHa /MTd /utf-8")
 else()
         set(CMAKE_CXX_FLAGS "-O3 -Wall -Wextra")
         set(CMAKE_CXX_FLAGS_DEBUG "-Wall -Wextra")
