Interactiveモードを消す。

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ add_subdirectory(./fakeit)
 include_directories("src/")
 include_directories("websocketpp/")
 include_directories("fakeit/single_header/gtest")
+include_directories("/usr/local/include")
 
 file(GLOB pinpon_SRC
         "src/*.h"
