ピカ狸改善は開発中。

--- a/pikatanuki/CMakeLists.txt
+++ b/pikatanuki/CMakeLists.txt
@@ -1,7 +1,12 @@
 project(pikatanuki)
 
+file(GLOB pikatanuki_SRC
+        "./*.h"
+        "./*.cc"
+        )
+
 add_executable(pikatanuki
-        main.cc
+        ${pikatanuki_SRC}
         )
 
 target_link_libraries(pikatanuki pinpon_lib)
