--- a/pikatanuki/client/package.json
+++ b/pikatanuki/client/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-react": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
     "@types/jest": "^25.1.3",
+    "@types/react-dom": "^16.9.5",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
     "html-loader": "^0.5.5",
