--- a/pikatanuki/client/package.json
+++ b/pikatanuki/client/package.json
@@ -29,8 +29,10 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "prismjs": "^1.19.0",
     "react": "^16.13.0",
-    "react-dom": "^16.13.0"
+    "react-dom": "^16.13.0",
+    "react-simple-code-editor": "^0.11.0"
   },
   "jest": {
     "moduleNameMapper": {
