--- a/pikatanuki/CMakeLists.txt
+++ b/pikatanuki/CMakeLists.txt
@@ -1,5 +1,7 @@
 project(pikatanuki)
 
+find_package(nlohmann_json)
+
 file(GLOB pikatanuki_SRC
         "./*.h"
         "./*.cc"
@@ -9,4 +11,4 @@ add_executable(pikatanuki
         ${pikatanuki_SRC}
         )
 
-target_link_libraries(pikatanuki pinpon_lib)
+target_link_libraries(pikatanuki pinpon_lib nlohmann_json::nlohmann_json)
