--- a/pikatanuki/CMakeLists.txt
+++ b/pikatanuki/CMakeLists.txt
@@ -1,6 +1,7 @@
 project(pikatanuki)
 
 find_package(nlohmann_json)
+find_package (Threads)
 
 file(GLOB pikatanuki_SRC
         "./*.h"
@@ -11,4 +12,4 @@ add_executable(pikatanuki
         ${pikatanuki_SRC}
         )
 
-target_link_libraries(pikatanuki pinpon_lib nlohmann_json::nlohmann_json)
+target_link_libraries(pikatanuki pinpon_lib nlohmann_json::nlohmann_json ${CMAKE_THREAD_LIBS_INIT})
