--- a/pikatanuki/CMakeLists.txt
+++ b/pikatanuki/CMakeLists.txt
@@ -1,6 +1,5 @@
 project(pikatanuki)
 
-find_package(nlohmann_json)
 find_package (Threads)
 
 file(GLOB pikatanuki_SRC
@@ -12,4 +11,4 @@ add_executable(pikatanuki
         ${pikatanuki_SRC}
         )
 
-target_link_libraries(pikatanuki pinpon_lib nlohmann_json::nlohmann_json ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(pikatanuki pinpon_lib ${CMAKE_THREAD_LIBS_INIT})
