--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -8,9 +8,8 @@ on:
 
 jobs:
   build:
-
+    name: "Build"
     runs-on: ubuntu-latest
-    
     steps:
     - uses: actions/checkout@v2
     - name: Checkout submodules
@@ -23,5 +22,23 @@ jobs:
       run: mkdir build && cd build && cmake ..
     - name: make
       run: cd build && make pinpon_test
-    - name: make test
+    - name: Upload binaries
+      uses: actions/upload-artifact@v1
+      with:
+        name: pinpon_test
+        path: build/pinpon_test
+  test:
+    name: "Test Core"
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+    - uses: actions/checkout@v2
+    - name: Make Build Dir
+      run: mkdir build
+    - name: Download binary
+      uses: actions/download-artifact@v1
+      with:
+        name: pinpon_test
+        path: build/
+    - name: pinpon_test
       run: cd build && ./pinpon_test
