--- a/pikatanuki/client/package.json
+++ b/pikatanuki/client/package.json
@@ -32,6 +32,7 @@
     "prismjs": "^1.19.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-google-login": "^5.1.1",
     "react-simple-code-editor": "^0.11.0"
   },
   "jest": {
