--- a/pikatanuki/client/package.json
+++ b/pikatanuki/client/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^16.9.5",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
+    "file-loader": "^5.1.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^25.1.0",
@@ -33,6 +34,7 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-google-login": "^5.1.1",
+    "react-router-dom": "^5.1.2",
     "react-simple-code-editor": "^0.11.0"
   },
   "jest": {
