--- a/rank/package.json
+++ b/rank/package.json
@@ -8,6 +8,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.16.1",
     "google-auth-library": "^5.10.1",
