--- a/pikatanuki/client/package.json
+++ b/pikatanuki/client/package.json
@@ -34,6 +34,7 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-google-login": "^5.1.1",
+    "react-https-redirect": "^1.1.0",
     "react-router-dom": "^5.1.2",
     "react-simple-code-editor": "^0.11.0"
   },
