--- a/pikatanuki/client/package.json
+++ b/pikatanuki/client/package.json
@@ -35,8 +35,10 @@
     "react-dom": "^16.13.0",
     "react-google-login": "^5.1.1",
     "react-https-redirect": "^1.1.0",
+    "react-markdown": "^4.3.1",
     "react-router-dom": "^5.1.2",
-    "react-simple-code-editor": "^0.11.0"
+    "react-simple-code-editor": "^0.11.0",
+    "remark-toc": "^7.0.0"
   },
   "jest": {
     "moduleNameMapper": {
