Refactor Tokenizer and move into isolated directory.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,8 @@ include_directories("/usr/include")
 file(GLOB pinpon_SRC
         "src/*.h"
         "src/*.cc"
+        "src/Lexer/*.h"
+        "src/Lexer/*.cc"
         )
 file(GLOB pinpon_test_SRC
         "test/*.h"
